	- [kevin] $2116: allocate metadata properly in send_file_and_debug_info
	- [kevin] $2118: fixed Insight preferences dialogs
	- [roms]  $2119: fixed linking with NO_GDB (missing xmalloc)
	- [roms]  $2121: fixed return value in engine_func for NO_GDB mode (stop engine)
	- [kevin] $2123: reset source ID when stopping the engine from engine_func (NO_GDB)
	- [kevin] $2128: HW4 has 8 MB of FlashROM

- 25/08/2005, version 2.80:
	- [roms] $1689: fixed Titanium skin loading and fixed bug in skin loader
	- [roms] $1692: re-enabled transient mode for windows
	- [roms] $1694: set transient mode as option
	- [kevin] $1695: merge changes from tigcc-debugging-branch:
		* integrate the GDB source debugger (command-line interface)
		* fix include paths for systems without BFD and readline installed
		* reenable the debugger if it has previously been disabled (by GDB)
		* integrate Insight, a graphical frontend for GDB
		* enable and fix Insight for MinGW (Win32) and Darwin (OS X)
		* force static linking for TCL-related stuff on OS X
		* don't chdir to $HOME (fixes Insight's path detection when running TiEmu using
		  a relative path)
		* allow .dbg files with spaces in the pathname and/or filename
		* fix libintl detection (fixes --enable-nls builds on OS X at least)
		* don't allow resetting while the debugger is busy
		* new Windows installer based on NSIS: GTK+ is downloaded and installed
		  automatically (after user confirmation) if needed
		* new Fedora (Core 4) RPMs
		* add XPM version (48x48) of Jaime Fernando Meza Meza's icon and use it for the
		  Fedora .desktop file.
		* support for BSS section debugging (_nostub only at the moment, TIGCC 0.96 Beta
		  5 required)
		* avoid link port access when browsing memory in the Insight memory window as well
		  (see $1588 below)
		* disable fvisibility support if --enable-shared or --enable-shared-* because it
		  is currently broken
	- [kevin] $1705: import PedroM (ld-tigcc build) 0.81 RC8